chore!: compatibility with Coolify `beta.373`
