# tools/openapi-overlay.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
     title: Coolify
     version: '0.1'
@@ -3257,7 +3257,7 @@ paths:
                     type: string
             responses:
                 '200':
-                    description: 'Project details'
+                    description: 'Environment details'
                     content:
                         application/json:
                             schema:
@@ -3371,10 +3371,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                type: array
-                                items:
-                                    $ref: '#/components/schemas/PrivateKey'
-                                $ref: "#/components/schemas/PrivateKey"
+                                $ref: '#/components/schemas/PrivateKey'
                 '401':
                     $ref: '#/components/responses/401'
                 '400':
@@ -3505,7 +3502,7 @@ paths:
                                     example: 127.0.0.1
                                     description: 'The IP of the server.'
                                 port:
-                                    type: string
+                                    type: integer
                                     example: 22
                                     description: 'The port of the server.'
                                 user:
@@ -3524,6 +3521,11 @@ paths:
                                     type: boolean
                                     example: false
                                     description: 'Instant validate.'
+                                proxy_type:
+                                    type: string
+                                    enum: [traefik, caddy, none]
+                                    example: traefik
+                                    description: 'The proxy type.'
                             type: object
             responses:
                 '201':
@@ -3609,6 +3611,14 @@ paths:
             summary: Update
             description: 'Update Server.'
             operationId: update-server-by-uuid
+            parameters:
+                - name: uuid
+                  in: path
+                  description: 'Server UUID'
+                  required: true
+                  schema:
+                    type: string
+                    format:
             requestBody:
                 description: 'Server updated.'
                 required: true
@@ -3626,7 +3636,7 @@ paths:
                                     type: string
                                     description: 'The IP of the server.'
                                 port:
-                                    type: string
+                                    type: integer
                                     description: 'The port of the server.'
                                 user:
                                     type: string
@@ -3640,6 +3650,10 @@ paths:
                                 instant_validate:
                                     type: boolean
                                     description: 'Instant validate.'
+                                proxy_type:
+                                    type: string
+                                    enum: [traefik, caddy, none]
+                                    description: 'The proxy type.'
                             type: object
             responses:
                 '201':
@@ -3647,10 +3661,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                type: array
-                                items:
-                                    $ref: '#/components/schemas/Server'
-                                $ref: "#/components/schemas/Server"
+                                $ref: '#/components/schemas/Server'
                 '401':
                     $ref: '#/components/responses/401'
                 '400':
@@ -3659,12 +3670,6 @@ paths:
                     $ref: '#/components/responses/404'
             security:
                 - bearerAuth: []
-            parameters:
-                - name: uuid
-                  in: path
-                  required: true
-                  schema:
-                    type: string
     '/servers/{uuid}/resources':
         get:
             tags:
@@ -4673,6 +4678,10 @@ components:
                 compose_parsing_version:
                     type: string
                     description: 'How Coolify parse the compose file.'
+                custom_nginx_configuration:
+                    type: string
+                    nullable: true
+                    description: 'Custom Nginx configuration base64 encoded.'
             type: object
         ApplicationDeploymentQueue:
             description: 'Project model'
@@ -4825,36 +4834,52 @@ components:
             properties:
                 id:
                     type: integer
+                    description: 'The server ID.'
                 uuid:
                     type: string
+                    description: 'The server UUID.'
                 name:
                     type: string
+                    description: 'The server name.'
                 description:
                     type: string
+                    description: 'The server description.'
                 ip:
                     type: string
+                    description: 'The IP address.'
                 user:
                     type: string
+                    description: 'The user.'
                 port:
+                    type: integer
+                    description: 'The port number.'
+                proxy_type:
                     type: string
+                    enum:
+                        - traefik
+                        - caddy
+                        - none
+                    description: 'The proxy type.'
                 high_disk_usage_notification_sent:
                     type: boolean
+                    description: 'The flag to indicate if the high disk usage notification has been sent.'
                 unreachable_notification_sent:
                     type: boolean
+                    description: 'The flag to indicate if the unreachable notification has been sent.'
                 unreachable_count:
                     type: integer
+                    description: 'The unreachable count for your server.'
                 validation_logs:
                     type: string
+                    description: 'The validation logs.'
                 log_drain_notification_sent:
                     type: boolean
+                    description: 'The flag to indicate if the log drain notification has been sent.'
                 swarm_cluster:
                     type: string
-                delete_unused_volumes:
-                    type: boolean
-                delete_unused_networks:
-                    type: boolean
+                    description: 'The swarm cluster configuration.'
                 settings:
-                    $ref: "#/components/schemas/ServerSetting"
+                    $ref: '#/components/schemas/ServerSetting'
             type: object
         ServerSetting:
             description: 'Server Settings model'
@@ -4929,8 +4954,10 @@ components:
                     type: string
                 delete_unused_volumes:
                     type: boolean
+                    description: 'The flag to indicate if the unused volumes should be deleted.'
                 delete_unused_networks:
                     type: boolean
+                    description: 'The flag to indicate if the unused networks should be deleted.'
             type: object
         Service:
             description: 'Service model'
@@ -5056,6 +5083,9 @@ components:
                 smtp_notifications_database_backups:
                     type: boolean
                     description: 'Whether to send database backup notifications via SMTP.'
+                smtp_notifications_server_disk_usage:
+                    type: boolean
+                    description: 'Whether to send server disk usage notifications via SMTP.'
                 discord_enabled:
                     type: boolean
                     description: 'Whether Discord is enabled or not.'
@@ -5077,6 +5107,9 @@ components:
                 discord_notifications_scheduled_tasks:
                     type: boolean
                     description: 'Whether to send scheduled task notifications via Discord.'
+                discord_notifications_server_disk_usage:
+                    type: boolean
+                    description: 'Whether to send server disk usage notifications via Discord.'
                 show_boarding:
                     type: boolean
                     description: 'Whether to show the boarding screen or not.'
